fix footer overflow issue with flexbox

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,15 +1,23 @@
+body{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+  min-height: 100dvh;
+}
 .container-fluid {
     padding-top: 70px;
     padding-bottom: 70px;
 }
 .navbar {
     padding-top: 15px;
-    padding-bottom: 15px;
+    padding: 15px;
     border: 0;
     border-radius: 0;
     margin-bottom: 0;
     font-size: 12px;
     letter-spacing: 5px;
+    width: 100%;
 }
 .navbar-nav  li a:hover {
     color: #1abc9c !important;
@@ -34,15 +42,8 @@
   color: black;
 }
 
-
-.footer-padding {
-	padding-bottom: 60px;
-}
-
 .footer {
-	position: absolute;
 	text-align: center;
-	bottom: 0;
 	width: 100%;
 	height: 60px;
 	background-color: #1abc9c;
